# JoltEdMod

./: .gitignore  README.md  main.py  pyproject.toml  tutorial_template.json  wiki_template.json
api_tutorials_generator/: __init__.py  api_content_generator.py  api_helper.py  block_factory.py  curriculum_generator.py  main.py  template_generator.py
curriculum_module_generator/: block.py  content_generator.py  main.py  template_generator.py
jolted_mod/: main.py  test.ipynb
modules/None/Professor of Computer Science/first year computer science students/: tutorial_template.json  wiki_template.json
tests/: test_jolted_mod.py
tutorials_generator/: api_content_generator.py  api_helper.py  block.py  content_generator.py  curriculum_generator.py  gui.py  main.py  template_generator.py
