[tool.poetry]
name = "curriculum_module_generator"
version = "0.0.3"
description = "Generates a jupyter notebook and markdown file for a topic"
authors = ["Nathan Laundry"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
markdown2 = "^2.5.1"
openai = "0.27.10"
nbformat = "^5.10.4"
markdownify = "^0.13.1"
tqdm = "^4.66.5"

[tool.poetry.scripts]
curriculum_module_generator = "curriculum_module_generator.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
